# voronoizer

./: .gitignore  CODE_REVIEW.md  PHASE_2_PLAN.md  README.md  REWRITE_PLAN.md  pyproject.toml
tests/: check_polygon.py  compare_taper.py  debug_cells.py  debug_subtract.py  make_test_stl.py  regression.py  spy_prism.py
tests/data/: cube_100mm.stl  cyl_r30_h120mm.stl  sphere_r20mm.stl  sphere_r50mm.stl
voronoizer/: __init__.py  __main__.py  cli.py  meshio.py  mirror_seeds.py  perforate.py  pipeline.py  progress.py  seeding.py  shell.py  surface_boundary.py  surface_pipeline.py  surface_prism.py  surface_voronoi.py  voronoi_cells.py
